Crumbs style fix - wrap for ios 5.

--- a/public/styles/components/crumbs.less
+++ b/public/styles/components/crumbs.less
@@ -4,7 +4,9 @@
 }
 
 .crumb {
+  line-height: @line-height;
   text-transform: capitalize;
+  word-break: break-word;
 
   color: @color-gray-d2;
 
